--- a/index.html
+++ b/index.html
@@ -26,14 +26,6 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: iPortfolio
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Updated: Jun 29 2024 with Bootstrap v5.3.3
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 
 <body class="index-page">
@@ -79,7 +71,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Rod Cantil</h2>
-        <p>Soy <span class="typed" data-typed-items="Desarrollador, Freelancer">Developerr</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>Soy <span class="typed" data-typed-items="Desarrollador, Freelancer">Desarrollador</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -90,14 +82,28 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Sobre mí</h2>
-        <p>Soy Rodolfo Cantillana Pinilla, vivo en Chile, soy seminómada ya que vivo entre Valparaíso y la isla de Chiloé. Aunque desearía ser una nómada digital. 
-          Hacia allá apunto mi norte. Soy Ingeniero Constructor de Profesión la cual he ejercido por 15 años. Hoy dando vuelta esa pagina he tomado la decisión de 
-          convertirme hacia la industria TI.
-        </p>
+        <p>Soy Rodolfo Cantillana Pinilla, vivo en Chile, soy seminómada ya que vivo entre Valparaíso y la isla de Chiloé. Uno de los últimos objetivos que tengo 
+          por estos dias es convertirme en un nómada digital y hacia allá me dirigo.
+        </p><br>
+        <p>Soy Ingeniero Constructor de Profesión la cual he ejercido por 15 años trabajando tanto en obra como en proyectos. En la actulidad, le he dado una vuelta 
+          a mi vida ya que he tomado la decisión de convertirme hacia la industria TI.
+        </p> 
         <br>
-        <p>Mis estudios en tecnología previos son 2 Diplomados en la Universidad de la Frontera, el primer diplomado es 
-            Digitalización 4.0 y el segundo fue Diplomados en Smart Cities. Me encuentro finalizando mi primer BootCamp de Ruby On Rails.
-            Me gusta mucho este rubro porque es un desafío constante justo lo que necesito para mi vida.
+        <p>Los años 2019 y 2020 realicé 2 Diplomados en enfocados en tecnología, el primer Diplomado es Digitalización 4.0 y el segundo fue Diplomado en 
+          Smart Cities. Ambos Diplomados los realicé en la Universidad de la Frontera en Temuco, Chile.
+        </p><br>
+        <p>
+          El año 2024 Realicé mi primer BootCamp de Desarrollo de Aplicaciones Web en Ruby On Rails. El BootCamp lo realicé en la Academia Desafio Latam 
+          a través del programa Talento Digital de SENCE. Aprendí tanto Frontend como Backend, conociendo las tecnologías HTML, CSS, JavaScript, Ruby, Rails,
+          
+        </p><br>
+        <p> Hoy en 2025 doy inicio a mi carrera TI como Desarrollador Web en Ruby on Rails, con la finalidad de seguir creciendo en este rubro y aportar
+          a la comunidad tecnologica. Avanzar en el desarrollo de aplicaciones web y seguir aprendiendo en este rubro. Me gusta mucho este rubro porque 
+          es un desafío constante justo lo que necesito para mi vida.
+
+        </p><br>
+        <p>
+          En lo personal soy aficionado a la MTB, gusto mucho del Standup Comedy, voy al gym y me encanta la playa!
         </p>
       </div><!-- End Section Title -->
 
@@ -110,13 +116,14 @@
           <div class="col-lg-8 content">
             <h2>Desarrollador web en Ruby on Rails</h2>
             <p class="fst-italic py-3">
-             Desarrollador web Full Stack jr., comenzando operaciones en Ruby on Rails, con conocimientos en HTML, CSS, PostgreSQL, Git, GitHub, Render, entre otros.
+            Desarrollador web Full Stack jr., comenzando operaciones en Ruby on Rails, con conocimientos en HTML, CSS, PostgreSQL, Git, GitHub, Render, 
+            entre otros.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Fecha de Nacimiento:</strong> <span>18 Octubre 1984</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Web:</strong> <span>www.rodcantil.site</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Web:</strong> <span>rodcantil.site</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>E-Mail:</strong> <span>rodolfo.cantillana@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Castro y Valparaíso, Chile</span></li>
                 </ul>
@@ -130,8 +137,8 @@
               </div>
             </div>
             <p class="py-3">
-              Poseo un gran entusiasmo por aprender y crecer en el ámbito de Ruby on Rails. Busco una oportunidad para 
-              aplicar mis conocimientos y habilidades en un entorno dinámico y colaborativo, contribuyendo al desarrollo de proyectos innovadores.
+              Poseo un gran entusiasmo por aprender y crecer en el mundo digital. Busco una oportunidad para aplicar mis conocimientos y habilidades en un 
+              entorno dinámico y colaborativo, contribuyendo al desarrollo de proyectos innovadores.
             </p>
           </div>
         </div>
@@ -159,14 +166,15 @@
             <div class="stats-item">
               <i class="bi bi-journal-richtext"></i>
               <span data-purecounter-start="0" data-purecounter-end="3" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Projects</strong></p>
+              <!-- OJO ACA ESTOS CONTADORES NO OLVIDARLOS -->
+              <p><strong>Proyectos</strong></p>
             </div>
           </div><!-- End Stats Item -->
 
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="853" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="667" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Horas de Estudio</strong></p>
             </div>
           </div><!-- End Stats Item -->
@@ -174,8 +182,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Hard Workers</strong> <span>rerum asperiores dolor</span></p>
+              <span data-purecounter-start="0" data-purecounter-end="42" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Horas de Trabajo</strong> <span></span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -190,8 +198,8 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Skills</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <h2>Habilidades</h2>
+        <p>Principales habilidades aprendidas</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -201,23 +209,23 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
+              <span class="skill"><span>HTML</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>CSS</span> <i class="val">90%</i></span>
+              <span class="skill"><span>CSS</span> <i class="val">60%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>JavaScript</span> <i class="val">75%</i></span>
+              <span class="skill"><span>JavaScript</span> <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -226,23 +234,23 @@
           <div class="col-lg-6">
 
             <div class="progress">
-              <span class="skill"><span>PHP</span> <i class="val">80%</i></span>
+              <span class="skill"><span>Git</span> <i class="val">95%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div><!-- End Skills Item -->
+
+            <div class="progress">
+              <span class="skill"><span>Subsistema Linux: Ubuntu</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>WordPress/CMS</span> <i class="val">90%</i></span>
+              <span class="skill"><span>Ruby on Rails</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div><!-- End Skills Item -->
-
-            <div class="progress">
-              <span class="skill"><span>Photoshop</span> <i class="val">55%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div><!-- End Skills Item -->
 
@@ -259,7 +267,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Resume</h2>
+        <h2>Estudios</h2>
         <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
