--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="667" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="787" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Horas de Estudio</strong></p>
             </div>
           </div><!-- End Stats Item -->
@@ -241,7 +241,7 @@
             </div><!-- End Skills Item -->
 
             <div class="progress">
-              <span class="skill"><span>Subsistema Linux: Ubuntu</span> <i class="val">80%</i></span>
+              <span class="skill"><span>PhotoShop</span> <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -268,7 +268,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Estudios</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+        <p>Estudios realizados incluye mi carrera base y los asociados al rubro tecnologico que comienzo
+          desde el año 2019.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -276,59 +277,57 @@
         <div class="row">
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-            <h3 class="resume-title">Sumary</h3>
 
-            <div class="resume-item pb-0">
-              <h4>Brandon Johnson</h4>
-              <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
-              <ul>
-                <li>Portland par 127,Orlando, FL</li>
-                <li>(123) 456-7891</li>
-                <li>alice.barkley@example.com</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
-
-            <h3 class="resume-title">Education</h3>
+            <h3 class="resume-title">Educación</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Ingeniería en Construcción</h4>
+              <h5>2006 - 2011</h5>
+              <p><em>DUOC UC, Sede Valparaiso</em></p>
+              <p>Finalizé mis estudios en el año 2010 obteniendo el título de Ingeniero Constructor año 2011.
+              </p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Diplomado en Digitalización y Nuevos Negocios | Industria 4.0,</h4>
+              <h5>2019 - 2020</h5>
+              <p><em>Universidad de la Frontera, Temuco, Chile</em></p>
+              <p><em>Beca Capital Humano CORFO</em></p>
+              <p>Se culmina Curso con proyecto tecnologico, H2Optimition app que a traves de algoritmo
+                en Php que busca generar ahorros y eficiencias en el bombeo de agua potable a los estanques
+                de distribución de la empresa sanitaria Aguas Araucania de Temuco. Como simulacion se logró
+                un ahorro de 9% en energia electrica para el bombeo de aguas. Fue un concurso de innovación
+                abierta, donde obtuvimos 2do lugar entre todos proyectos.
+              </p>
             </div><!-- Edn Resume Item -->
 
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
-            <h3 class="resume-title">Professional Experience</h3>
+            <h3 class="resume-title">Educación</h3>
             <div class="resume-item">
-              <h4>Senior graphic design specialist</h4>
-              <h5>2019 - Present</h5>
-              <p><em>Experion, New York, NY </em></p>
-              <ul>
-                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
-              </ul>
+              <h4>Diplomado en Ciudades Inteligentes: Mejorando la calidad de vida urbana.</h4>
+              <h5>2020 -2020</h5>
+              <p><em>Universidad de la Frontera, Temuco, Chile</em></p>
+              <p><em>Beca Banco Interamericano de Desarrollo BID</em></p>
+              <p>Se culmina Diplomado con proyecto tecnologico, Punto TOUR RA una aplicacion 
+                offline dirigida a turistas que visitan la isla de Chiloé que buscan conocer la 
+                cultura y patrimonio de la isla. a través de un mapa interactivo que muestra
+                la ciudad de Castro y sus alrededores, con puntos de interés turístico y cultural.
+                Mito Tour RA es realidad aumentada que te permite Ver e interactuar con
+                los seres mitologicos de la isla de Chiloé.
+              </p>
+                
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Graphic design specialist</h4>
-              <h5>2017 - 2018</h5>
-              <p><em>Stepping Stone Advertising, New York, NY</em></p>
-              <ul>
-                <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-                <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-                <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
-              </ul>
+              <h4>Curso Inglés Nivel B2</h4>
+              <h5>2022- 2022</h5>
+              <p><em> OTEC Inglés Siempre Capacitaciones LTDA - Curso SENCE</em></p>
+              <p>
+                Curso Inglés Nivel B2, Con Referencia Al Marco Común Europeo Para Las Lenguas
+                120 Horas 
+              </p>
+            
             </div><!-- Edn Resume Item -->
 
           </div>
