--- a/index.html
+++ b/index.html
@@ -584,7 +584,8 @@
 
           <div class="col-lg-7">
 
-            <form  action="https://formspree.io/f/xdkkpdkv" class="php-email-form" method="POST" data-aos="fade-up" data-aos-delay="200">
+            <form  action="https://formsubmit.co/rodolfo.cantillana@gmail.com" class="php-email-form" method="POST" data-aos="fade-up" data-aos-delay="200">
+            <!-- <form  action="https://formspree.io/f/xdkkpdkv" class="php-email-form" method="POST" data-aos="fade-up" data-aos-delay="200"> -->
 
               <div class="row gy-4">
 
