--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
+  <link href="assets/img/code_icono.png" rel="icon">
+  
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
@@ -44,9 +43,10 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://x.com/RodCantilla" target="_blank" class="twitter"><i class="bi bi-twitter-x"></i></a>
+      <a href="https://www.instagram.com/rodcantil" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/rodcantil" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.github.com/rodcantil" target="_blank" class="github"><i class="bi bi-github"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -584,8 +584,8 @@
 
           <div class="col-lg-7">
 
-            <form  action="https://formsubmit.co/rodolfo.cantillana@gmail.com" class="php-email-form" method="POST" data-aos="fade-up" data-aos-delay="200">
-            <!-- <form  action="https://formspree.io/f/xdkkpdkv" class="php-email-form" method="POST" data-aos="fade-up" data-aos-delay="200"> -->
+            <!-- <form  action="https://formsubmit.co/39d53bc0d4ae95232832cc3ae7b99e7a" class="php-email-form" method="POST" data-aos="fade-up" data-aos-delay="200"> -->
+            <form  action="https://formspree.io/f/xdkkpdkv" class="php-email-form" method="POST" data-aos="fade-up" data-aos-delay="200">
 
               <div class="row gy-4">
 
