--- a/index.html
+++ b/index.html
@@ -404,13 +404,12 @@
                 <div class="portfolio-info">
                   <h4>Flyers</h4>
                   <p>Varios Flyers</p>
-                  <a href="assets/img/Portafolio/Diseño/Invitacion La Minga.jpg" title="Chilwarma" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
-                  <a href="assets/img/Portafolio/Diseño/Afiche Minga1.JPG" title="Chilwarma" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
-                  <a href="assets/img/Portafolio/Diseño/AFiche Minga2.jpg" title="Chilwarma" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
-                  <a href="assets/img/Portafolio/Diseño/Afiche Minga 3.jpg" title="Chilwarma" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
-                  <a href="assets/img/Portafolio/Diseño/Afiche Minga 4.jpg" title="Chilwarma" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
-                  <a href="assets/img/Portafolio/Diseño/Afiche Trust Construccion.png" title="Chilwarma" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
-                  <a href="assets/img/Portafolio/Diseño/FLyer La vuelta.png" title="Chilwarma" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/Portafolio/Diseño/Afiche Minga1.JPG" title="Afiche Minga 1" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/Portafolio/Diseño/AFiche Minga2.jpg" title="Afiche Minga 2" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/Portafolio/Diseño/Afiche Minga 3.jpg" title="Afiche Minga 3" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/Portafolio/Diseño/Afiche Minga 4.jpg" title="Afiche Minga 4" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/Portafolio/Diseño/Afiche Trust Construccion.png" title="Afiche Trust Construccion" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
+                  <a href="assets/img/Portafolio/Diseño/FLyer La vuelta.png" title="Afiche La Vuelta" data-gallery="portfolio-gallery-flyers" class="glightbox preview-link1"><i class="bi bi-zoom-in"></i></a>
                   
                 </div>
               </div>
