Final + CV y cambio foto

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/Rod_Bolt_caribe.jpg" data-aos="fade-in" class="">
+      <img src="assets/img/20220929_190727.jpg" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Rod Cantil</h2>
@@ -103,7 +103,11 @@
 
         </p><br>
         <p>
-          En lo personal soy aficionado a la MTB, gusto mucho del Standup Comedy, voy al gym y me encanta la playa!
+          Soy una persona muy proactiva, con muchas ganas de aprender y crecer en el mundo digital. Me gusta mucho trabajar en equipo y colaborar en proyectos
+          innovadores. Me gusta mucho la playa, la naturaleza y la vida al aire libre. Soy muy sociable y me gusta mucho la buena conversación.
+        </p>
+        <p>
+         Si quierees saber más de mi pasado constructor puedes descargar mi CV <a href="assets/CV Rodolfo Cantillana Pinilla.pdf">acá</a>
         </p>
       </div><!-- End Section Title -->
 
