--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/20220929_190727.jpg" data-aos="fade-in" class="">
+      <img src="assets/img/rod_cascada.jpg" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Rod Cantil</h2>
-        <p>Soy <span class="typed" data-typed-items="Desarrollador, Freelancer">Desarrollador</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>Soy <span class="typed" data-typed-items="Diseñador, Desarrollador, Freelance">Desarrollador</span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -104,10 +104,10 @@
         </p><br>
         <p>
           Soy una persona muy proactiva, con muchas ganas de aprender y crecer en el mundo digital. Me gusta mucho trabajar en equipo y colaborar en proyectos
-          innovadores. Me gusta mucho la playa, la naturaleza y la vida al aire libre. Soy muy sociable y me gusta mucho la buena conversación.
+          innovadores. Me gusta mucho la playa, la naturaleza y la vida al aire libre.
         </p>
         <p>
-         Si quierees saber más de mi pasado constructor puedes descargar mi CV <a href="assets/CV Rodolfo Cantillana Pinilla.pdf">acá</a>
+         Si quieres saber más de mi pasado constructor puedes descargar mi CV <a href="assets/CV Rodolfo Cantillana Pinilla.pdf">acá</a>
         </p>
       </div><!-- End Section Title -->
 
