--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <p>Soy Rodolfo Cantillana Pinilla, vivo en Chile, soy seminómada ya que vivo entre Valparaíso y la isla de Chiloé. Uno de los últimos objetivos que tengo 
           por estos dias es convertirme en un nómada digital y hacia allá me dirigo.
         </p><br>
-        <p>Soy Ingeniero Constructor de Profesión la cual he ejercido por 15 años trabajando tanto en obra como en proyectos. En la actulidad, le he dado una vuelta 
+        <p>Soy Ingeniero Constructor de Profesión la cual he ejercido por 15 años trabajando tanto en obra como en proyectos. En la actualidad, le he dado una vuelta 
           a mi vida ya que he tomado la decisión de convertirme hacia la industria TI.
         </p> 
         <br>
@@ -94,12 +94,12 @@
         </p><br>
         <p>
           El año 2024 Realicé mi primer BootCamp de Desarrollo de Aplicaciones Web en Ruby On Rails. El BootCamp lo realicé en la OTEC Inforcap  
-          a través del programa Talento Digital de SENCE. Aprendí tanto Frontend como Backend, conociendo las tecnologías HTML, CSS, JavaScript, Ruby, Rails,
+          a través del programa Talento Digital de SENCE. Aprendí tanto Frontend como Backend, conociendo las tecnologías HTML, CSS, JavaScript, Ruby y Rails.
           
         </p><br>
         <p> Hoy en 2025 doy inicio a mi carrera TI como Desarrollador Web en Ruby on Rails, con la finalidad de seguir creciendo en este rubro y aportar
-          a la comunidad tecnologica. Avanzar en el desarrollo de aplicaciones web y seguir aprendiendo en este rubro. Me gusta mucho este rubro porque 
-          es un desafío constante justo lo que necesito para mi vida.
+          a la comunidad tecnológica. Avanzar en el desarrollo de aplicaciones web y seguir aprendiendo. Me gusta mucho este rubro porque es un desafío 
+          constante justo lo que necesito para mi vida.
 
         </p><br>
         <p>
@@ -272,8 +272,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Estudios</h2>
-        <p>Estudios realizados incluye mi carrera base y los asociados al rubro tecnologico que comienzo
-          desde el año 2019.</p>
+        <p>Estudios realizados incluye mi carrera base y los asociados al rubro tecnológico que comienzo el año 2019.</p>
       </div><!-- End Section Title -->
 
       <h2 class="fw-bold ms-2">Educación</h2><br>
@@ -288,7 +287,7 @@
               <h4>Ingeniería en Construcción</h4>
               <h5>2006 - 2011</h5>
               <p><em>DUOC UC, Sede Valparaiso</em></p>
-              <p>Finalizé mis estudios en el año 2010 obteniendo el título de Ingeniero Constructor año 2011.
+              <p>Finalicé mis estudios en el año 2010 obteniendo el título de Ingeniero Constructor el año 2011.
               </p>
             </div><!-- Edn Resume Item -->
 
@@ -297,11 +296,9 @@
               <h5>2019 - 2020</h5>
               <p><em>Universidad de la Frontera, Temuco, Chile</em></p>
               <p><em>Beca Capital Humano CORFO</em></p>
-              <p>Se culmina con proyecto tecnologico, H2Optimition app que a traves de algoritmo
-                en Php que busca generar ahorros y eficiencias en el bombeo de agua potable a los estanques
-                de distribución de la empresa sanitaria Aguas Araucania de Temuco. Como simulacion se logró
-                un ahorro de 9% en energia electrica para el bombeo de aguas. Fue un concurso de innovación
-                abierta, donde obtuvimos 2do lugar entre todos proyectos.
+              <p>Se culmina con proyecto tecnologico, H2Optimition app que a traves de algoritmo  que busca generar ahorros y eficiencias en el bombeo de agua
+                potable a los estanques de distribución de la empresa sanitaria Aguas Araucanía de Temuco. Como simulación se logró un ahorro de 9% en energía 
+                eléctrica para el bombeo de agua potable. Fue un concurso de innovación abierta, donde obtuvimos 2do lugar entre todos proyectos.
               </p>
             </div><!-- Edn Resume Item -->
 
@@ -310,12 +307,12 @@
               <h5>2020 -2020</h5>
               <p><em>Universidad de la Frontera, Temuco, Chile</em></p>
               <p><em>Beca Banco Interamericano de Desarrollo BID</em></p>
-              <p>Se culmina con proyecto tecnologico, Punto TOUR RA una aplicacion 
-                offline dirigida a turistas que visitan la isla de Chiloé que buscan conocer la 
-                cultura y patrimonio de la isla. a través de un mapa interactivo que muestra
+              <p>Se culmina con proyecto tecnológico, Punto TOUR RA una aplicación 
+                offline dirigida a turistas que visitan la isla de Chiloé y que buscan conocer la 
+                cultura y patrimonio de la isla, a través de un mapa interactivo que muestra
                 la ciudad de Castro y sus alrededores, con puntos de interés turístico y cultural.
                 Mito Tour RA es realidad aumentada que te permite Ver e interactuar con
-                los seres mitologicos de la isla de Chiloé.
+                los seres mitológicos de la isla de Chiloé.
               </p>
                 
             </div><!-- Edn Resume Item -->
