--- a/index.html
+++ b/index.html
@@ -106,9 +106,7 @@
           Soy una persona muy proactiva, con muchas ganas de aprender y crecer en el mundo digital. Me gusta mucho trabajar en equipo y colaborar en proyectos
           innovadores. Me gusta mucho la playa, la naturaleza y la vida al aire libre.
         </p><br>
-        <p>
-         Si quieres saber más de mi pasado constructor puedes descargar mi CV <a href="assets/CV Rodolfo Cantillana Pinilla.pdf">acá</a>
-        </p>
+
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -557,9 +555,9 @@
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="200">
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
-                  <h3>Direccion</h3>
+                  <h4>Direccion</h4>
                   <p>Blanco Encalada 191, Chiloé, Chile</p>
-                  <p>Nuevo Placilla, Valparaiso, Chile</p>
+
                 </div>
               </div><!-- End Info Item -->
 
@@ -568,8 +566,8 @@
               <div class="info-item d-flex" data-aos="fade-up" data-aos-delay="400">
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
-                  <h3>Email</h3>
-                  <p>rodolfo.cantillana@gmail.com</p>
+                  <h4>Email</h4>
+                  <p>lavueltachilo@gmail.com</p>
                 </div>
               </div><!-- End Info Item -->
 
